# BlaiBott

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/src/: Common  Main.cpp
Server/: CMakeLists.txt
Server/src/: Main.cpp  Shared
Server/src/Common/: Common.h
